# vigilant-pancake

./: .env  .gitignore  Dockerfile  README.md  config.py  conftest.py  docker-compose.yml  flask_app.py  mypy.ini  orm.py  pyproject.toml  repository.py  requirements.txt  services.py  test_allocate.py  test_api.py  test_batches.py  test_orm.py
adapters/: orm.py  repository.py
app/: main.py
app/application/: order_service.py
app/domain/: model.py
app/infrastructure/: batch_repository.py  database.py  orm.py
app/presentation/: order_endpoints.py
domain/: model.py
endpoints/: flask_app.py
service_layer/: services.py
src/: main.py
src/application/: order_service.py  services.py
src/domain/: model.py
src/endpoints/: flask_app.py
src/infrastructure/: database.py  orm.py  repository.py
src/presentation/: order_endpoints.py
tests/: conftest.py  test_order_service.py  utils.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
